src/test/ui/parser/issue-76437-pub-crate-unsafe.rs
// edition:2018

mod t {
    unsafe pub(crate) fn t() {}
    //~^ ERROR expected one of `extern` or `fn`, found keyword `pub`
}
